
cmake_minimum_required(VERSION 2.8)

project(leetcode)

set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CONFIGURATION_TYPES ${CMAKE_BUILD_TYPE})
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)

include_directories(.)

file(GLOB LEETCODE_SOURCE_DIRS P*XX)
foreach(LEETCODE_SOURCE_DIR ${LEETCODE_SOURCE_DIRS})

  file(GLOB LEETCODE_SOURCE_FILES ${LEETCODE_SOURCE_DIR}/P*.cpp)
  foreach(LEETCODE_SOURCE_FILE ${LEETCODE_SOURCE_FILES})
    string(REPLACE ${LEETCODE_SOURCE_DIR}/P p LEETCODE_TARGET_NAME ${LEETCODE_SOURCE_FILE})
    string(SUBSTRING ${LEETCODE_TARGET_NAME} 0 5 LEETCODE_TARGET_NAME)
    add_executable(${LEETCODE_TARGET_NAME} ${LEETCODE_SOURCE_FILE})
  endforeach()

endforeach()

add_executable(${PROJECT_NAME}_run_all run_all.cpp)
